<resources>
    <string name="app_name">RentItNow</string>
    <string name="type">Type</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotPass">Forgot Password</string>
    <string name="user">User</string>
    <string name="vendor">Vendor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_file">Select File</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date Of Birth</string>
    <string name="vendor_signin">Vendor SignIn</string>
    <string name="add_license_number">License Number</string>
    <string name="add_license_image">Add License Image</string>
    <string name="upload_signin">Upload License Details &amp; Sign In</string>
    <string name="Fname">First Name</string>
    <string name="LName">Last Name</string>
    <string name="PhnNumber">Phone Number</string>
    <string name="Address">Address</string>
    <string name="city">City</string>
    <string name="home">Home</string>
    <string name="Profile">Profile</string>
    <string name="booking">Booking History</string>
    <string name="others">Others</string>
    <string name="share">Share</string>
    <string name="logout">Log Out</string>
    <string name="navigation_drawer_open">Open Navigation Bar</string>
    <string name="navigation_drawer_close">Close Navigation Bar</string>

    <string name="or">OR</string>
    <string name="additional_info">Additional Info Required</string>
    <string name="cont">Continue</string>
    <string-array name="Cities">
        <item>Coquitlam</item>
        <item>New Westminster</item>
        <item>Vancouver</item>
        <item>Surrey</item>
    </string-array>
    <string name="facebook_app_id">925481281659139</string>
    <string name="fb_login_protocol_scheme">fb925481281659139</string>
    <string name="cont_as_user">Continue as user</string>
    <string name="cont_as_vendor">Continue as Vendor</string>
    <string name="item_type">Item Type</string>
    <string name="cost_per_day">Cost per Day</string>
    <string name="color">Colour</string>
    <string name="publish">Publish</string>
    <string name="model">Model</string>
    <string name="manufacture">Manufacture</string>
    <string name="bookridetext">Pick the Data and Location</string>
    <string name="pickup_loc">Pick Up Location</string>
    <string name="pickup_date">Pick Up Date</string>
    <string name="return_date">Return Date</string>
    <string name="transmission_type">Transmission Type</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="description">Description</string>
    <string name="published_vehicles">Published Vehicles</string>
    <string name="availablecars">Available Vehicles</string>
    <string name="book">Book</string>
    <string name="view">View</string>
    <string name="proceed">Select Add Ons</string>
    <string name="add_ons">ADD ONS</string>
    <string name="childSeat">Child Seat ($50)</string>
    <string name="petrolOrDiesel">Petrol or Diesel ($50)</string>
    <string name="addionalKey">Additional Key ($5)</string>
    <string name="Proceed">Proceed to Booking</string>
    <string name="taxes">Taxes</string>
    <string name="finalw">Final</string>
    <string name="pvrt">PVRT</string>
    <string name="vlcrec">VLF</string>
    <string name="gst">GOODS AND SVCS TAX (5.0%)</string>
    <string name="pst">PST (7.0%)</string>
    <string name="confirmation">Confirm Booking</string>
    <string name="payAtPickup">PAY AT PICKUP</string>
    <string name="payUsingPaypal">PAY USING PAYPAL</string>
    <string name="vehicle">VEHICLE</string>
    <string name="tax_info">
        "<b>Taxes and Fees</b>"
        "<ul>"
        "<li>Passenger Vehicle Rental Tax (PVRT),
        PVRT is charged at a rate of $1.50/day.</li>"
        "<li>Goods and services tax (GST),It is 5% of final price with Addons.</li>"
        "<li>B.C. provincial sales tax (PST),It is 7% of final price with Addons.</li>"
        "<li>Vehicle Licensing Fee (VLF),VLF is charged at a rate of $2/day,
        This fee is for Rentit Now charge of the proportionate amount of vehicle registration, licensing and related fees applicable to a rental.</li>"
        "</ul>"
    </string>
    <string name="booking_done">Booking Done Successfully</string>
    <string name="back_to_home">Back To Home</string>
    <string name="currentbookings">Current Bookings</string>
    <string name="nobookings">No Bookings Found</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="bookingid">Booking ID</string>
    <string name="addons">Addons</string>
    <string name="vehicle_type">Vehicle</string>
    <string name="final_price">Final Price</string>
    <string name="vendor_details">Vendor Details</string>
    <string name="delete_booking">Cancel this booking</string>
    <string name="cancellation_notice">You can only cancel booking till 24 hours before your pickup date</string>
    <string name="pastBookings">Past Bookiings</string>
    <string name="rate_experience">Rate Your Experience</string>
    <string name="feedback">Enter Feedback</string>
    <string name="submit">Submit</string>
    <string name="rate_booking">Rate this Booking</string>
    <string name="thanks_feedback">Thank You for your feedback!</string>
    <string name="reviews">Reviews</string>
</resources>